--- a/programs.cfg
+++ b/programs.cfg
@@ -1,20 +1,20 @@
 {
      ["network"] = {
         ["files"] = {
-            ["master/network/80_network.lua"] = "//boot",
-            ["master/network/95_hostname.lua"] = "//boot",
-            ["master/network/network.lua"] = "//lib",
-            ["master/network/loopback.lua"] = "//lib/network",
-            ["master/network/modem.lua"] = "//lib/network",
-            ["master/network/tunnel.lua"] = "//lib/network",
-            ["master/network/arp.lua"] = "//bin",
-            ["master/network/ifconfig.lua"] = "//bin",
-            ["master/network/ping.lua"] = "//bin",
-            ["master/network/route.lua"] = "//bin",
-            ["master/network/nc.lua"] = "//usr/bin",
-            ["master/network/ifconfig"] = "//usr/man",
-            ["master/network/network"] = "/bin",
-            ["master/network/ping"] = "/bin"
+            ["master/network/boot/80_network.lua"] = "//boot",
+            ["master/network/boot/95_hostname.lua"] = "//boot",
+            ["master/network/lib/network.lua"] = "//lib",
+            ["master/network/lib/network/loopback.lua"] = "//lib/network",
+            ["master/network/lib/network/modem.lua"] = "//lib/network",
+            ["master/network/lib/network/tunnel.lua"] = "//lib/network",
+            ["master/network/bin/arp.lua"] = "//bin",
+            ["master/network/bin/ifconfig.lua"] = "//bin",
+            ["master/network/bin/ping.lua"] = "//bin",
+            ["master/network/bin/route.lua"] = "//bin",
+            ["master/network/usr/bin/nc.lua"] = "//usr/bin",
+            ["master/network/usr/man/ifconfig"] = "//usr/man",
+            ["master/network/usr/man/network"] = "/bin",
+            ["master/network/usr/man/ping"] = "/bin"
         },
         ["repo"] = "tree/master/network",
         ["dependencies"] = {
