--- a/programs.cfg
+++ b/programs.cfg
@@ -1,5 +1,5 @@
 {
-     ["network"] = {
+     ["networking"] = {
         ["files"] = {
             ["master/network/boot/80_network.lua"] = "//boot",
             ["master/network/boot/95_hostname.lua"] = "//boot",
