Rewrote basic network code as well as drivers for modems.

--- a/programs.cfg
+++ b/programs.cfg
@@ -1,17 +1,10 @@
 {
      ["networking"] = {
         ["files"] = {
-            ["master/network/boot/80_network.lua"] = "//boot",
-            ["master/network/boot/95_hostname.lua"] = "//boot",
-            ["master/network/lib/network.lua"] = "//lib",
-            ["master/network/lib/network/loopback.lua"] = "//lib/network",
+            ["master/network/boot/81_networkLayer1.lua"] = "//boot",
+            ["master/network/lib/libLayer1network.lua"] = "//lib",
             ["master/network/lib/network/modem.lua"] = "//lib/network",
-            ["master/network/lib/network/tunnel.lua"] = "//lib/network",
-            ["master/network/bin/arp.lua"] = "//bin",
-            ["master/network/bin/ifconfig.lua"] = "//bin",
-            ["master/network/bin/ping.lua"] = "//bin",
-            ["master/network/bin/route.lua"] = "//bin",
-            ["master/network/usr/bin/nc.lua"] = "//usr/bin",
+            ["master/network/bin/stp.lua"] = "//bin",
             ["master/network/usr/man/ifconfig"] = "//usr/man",
             ["master/network/usr/man/network"] = "/bin",
             ["master/network/usr/man/ping"] = "/bin"
@@ -23,6 +16,6 @@
         ["name"] = "Network Stack for OpenComputers",
         ["description"] = "Network stack for OpenComputers, implements ICMP, broadcast, routing, tcp and udp like protocols",
         ["authors"] = "Olaf Altwirren",
-        ["version"] = "0.2"
+        ["version"] = "0.3"
     }
 }
