Added logging to file.

--- a/programs.cfg
+++ b/programs.cfg
@@ -3,6 +3,7 @@
         ["files"] = {
             ["master/network/boot/81_networkLayer1.lua"] = "//boot",
             ["master/network/lib/libLayer1network.lua"] = "//lib",
+            ["master/network/lib/logging.lua"] = "//lib",
             ["master/network/lib/network/modem.lua"] = "//lib/network",
             ["master/network/bin/stp.lua"] = "//bin",
             ["master/network/usr/man/ifconfig"] = "//usr/man",
@@ -16,6 +17,6 @@
         ["name"] = "Network Stack for OpenComputers",
         ["description"] = "Network stack for OpenComputers, implements ICMP, broadcast, routing, tcp and udp like protocols",
         ["authors"] = "Olaf Altwirren",
-        ["version"] = "0.5"
+        ["version"] = "0.6"
     }
 }
