--- a/programs.cfg
+++ b/programs.cfg
@@ -6,6 +6,7 @@
             ["master/network/lib/logging.lua"] = "//lib",
             ["master/network/lib/network/modem.lua"] = "//lib/network",
             ["master/network/bin/stp.lua"] = "//bin",
+            ["master/network/bin/ifconfig.lua"] = "//bin",
             ["master/network/usr/man/ifconfig"] = "//usr/man",
             ["master/network/usr/man/network"] = "/bin",
             ["master/network/usr/man/ping"] = "/bin"
@@ -17,6 +18,6 @@
         ["name"] = "Network Stack for OpenComputers",
         ["description"] = "Network stack for OpenComputers, implements ICMP, broadcast, routing, tcp and udp like protocols",
         ["authors"] = "Olaf Altwirren",
-        ["version"] = "0.10"
+        ["version"] = "0.11"
     }
 }
