Added INP protocoll handling in layer1. Added hostname script to boot. Added libconfig to the libraries.

--- a/programs.cfg
+++ b/programs.cfg
@@ -2,9 +2,12 @@
      ["networking"] = {
         ["files"] = {
             ["master/network/boot/81_networkLayer1.lua"] = "//boot",
+            ["master/network/boot/82_hostname.lua"] = "//boot",
             ["master/network/lib/libLayer1network.lua"] = "//lib",
             ["master/network/lib/logging.lua"] = "//lib",
+            ["master/network/lib/libconfig.lua"] = "//lib",
             ["master/network/lib/network/modem.lua"] = "//lib/network",
+            ["master/network/lib/network/tunnel.lua"] = "//lib/network",
             ["master/network/bin/stp.lua"] = "//bin",
             ["master/network/bin/stping.lua"] = "//bin",
             ["master/network/bin/ifconfig.lua"] = "//bin",
@@ -19,6 +22,6 @@
         ["name"] = "Network Stack for OpenComputers",
         ["description"] = "Network stack for OpenComputers, implements ICMP, broadcast, routing, tcp and udp like protocols",
         ["authors"] = "Olaf Altwirren",
-        ["version"] = "0.43"
+        ["version"] = "0.45"
     }
 }
