Added json library. Renamed libconfig to fileconfig.

--- a/programs.cfg
+++ b/programs.cfg
@@ -5,7 +5,8 @@
             ["master/network/boot/82_hostname.lua"] = "//boot",
             ["master/network/lib/libLayer1network.lua"] = "//lib",
             ["master/network/lib/logging.lua"] = "//lib",
-            ["master/network/lib/libconfig.lua"] = "//lib",
+            ["master/network/lib/fileconfig.lua"] = "//lib",
+            ["master/network/lib/json.lua"] = "//lib",
             ["master/network/lib/network/modem.lua"] = "//lib/network",
             ["master/network/lib/network/tunnel.lua"] = "//lib/network",
             ["master/network/bin/stp.lua"] = "//bin",
@@ -22,6 +23,6 @@
         ["name"] = "Network Stack for OpenComputers",
         ["description"] = "Network stack for OpenComputers, implements ICMP, broadcast, routing, tcp and udp like protocols",
         ["authors"] = "Olaf Altwirren",
-        ["version"] = "0.45"
+        ["version"] = "0.46"
     }
 }
