Fixed refactoring errors.

--- a/programs.cfg
+++ b/programs.cfg
@@ -1,28 +1,41 @@
 {
-     ["networking"] = {
+     ["oa-baselibs"] = {
         ["files"] = {
-            ["master/network/boot/81_network.lua"] = "//boot",
-            ["master/network/boot/82_hostname.lua"] = "//boot",
-            ["master/network/lib/network.lua"] = "//lib",
-            ["master/network/lib/logging.lua"] = "//lib",
-            ["master/network/lib/fileconfig.lua"] = "//lib",
-            ["master/network/lib/json.lua"] = "//lib",
-            ["master/network/lib/network/modem.lua"] = "//lib/network",
-            ["master/network/lib/network/tunnel.lua"] = "//lib/network",
-            ["master/network/bin/stp.lua"] = "//bin",
-            ["master/network/bin/stping.lua"] = "//bin",
-            ["master/network/bin/ifconfig.lua"] = "//bin",
-            ["master/network/usr/man/ifconfig"] = "//usr/man",
-            ["master/network/usr/man/network"] = "/bin",
-            ["master/network/usr/man/ping"] = "/bin"
+            ["master/baselibs/lib/logging.lua"] = "//lib",
+            ["master/baselibs/lib/fileconfig.lua"] = "//lib",
+            ["master/baselibs/lib/json.lua"] = "//lib",
         },
         ["repo"] = "tree/master/network",
         ["dependencies"] = {
             
         },
-        ["name"] = "Network Stack for OpenComputers",
-        ["description"] = "Network stack for OpenComputers, implements ICMP, broadcast, routing, tcp and udp like protocols",
+        ["name"] = "Base Libraries commonly used",
+        ["description"] = "Base libraries for common stuff of all OA-Packages",
         ["authors"] = "Olaf Altwirren",
-        ["version"] = "0.62"
-    }
+        ["version"] = "0.1"
+    },
+    ["oa-network"] = {
+            ["files"] = {
+                ["master/network/boot/81_network.lua"] = "//boot",
+                ["master/network/boot/82_hostname.lua"] = "//boot",
+                ["master/network/lib/network.lua"] = "//lib",
+                ["master/network/lib/network/modem.lua"] = "//lib/network",
+                ["master/network/lib/network/tunnel.lua"] = "//lib/network",
+                ["master/network/bin/stp.lua"] = "//bin",
+                ["master/network/bin/dig.lua"] = "//bin",
+                ["master/network/bin/stping.lua"] = "//bin",
+                ["master/network/bin/ifconfig.lua"] = "//bin",
+                ["master/network/usr/man/ifconfig"] = "//usr/man",
+                ["master/network/usr/man/network"] = "/bin",
+                ["master/network/usr/man/ping"] = "/bin"
+            },
+            ["repo"] = "tree/master/network",
+            ["dependencies"] = {
+                ["oa-baselibs"] = "/"
+            },
+            ["name"] = "Network Stack for OpenComputers",
+            ["description"] = "Network stack for OpenComputers, implements ICMP, broadcast, routing, tcp and udp like protocols",
+            ["authors"] = "Olaf Altwirren",
+            ["version"] = "0.64"
+        }
 }
