--- a/programs.cfg
+++ b/programs.cfg
@@ -1,5 +1,5 @@
 {
-     ["oa-baselibs"] = {
+     ["oabaselibs"] = {
         ["files"] = {
             ["master/baselibs/lib/logging.lua"] = "//lib",
             ["master/baselibs/lib/fileconfig.lua"] = "//lib",
@@ -12,9 +12,9 @@
         ["name"] = "Base Libraries commonly used",
         ["description"] = "Base libraries for common stuff of all OA-Packages",
         ["authors"] = "Olaf Altwirren",
-        ["version"] = "0.1"
+        ["version"] = "0.2"
     },
-    ["oa-network"] = {
+    ["oanetwork"] = {
             ["files"] = {
                 ["master/network/boot/81_network.lua"] = "//boot",
                 ["master/network/boot/82_hostname.lua"] = "//boot",
@@ -31,11 +31,11 @@
             },
             ["repo"] = "tree/master/network",
             ["dependencies"] = {
-                ["oa-baselibs"] = "/"
+                ["oabaselibs"] = "/"
             },
             ["name"] = "Network Stack for OpenComputers",
             ["description"] = "Network stack for OpenComputers, implements ICMP, broadcast, routing, tcp and udp like protocols",
             ["authors"] = "Olaf Altwirren",
-            ["version"] = "0.66"
+            ["version"] = "0.67"
         }
 }
