--- a/programs.cfg
+++ b/programs.cfg
@@ -5,7 +5,7 @@
             ["master/baselibs/lib/fileconfig.lua"] = "//lib",
             ["master/baselibs/lib/json.lua"] = "//lib",
         },
-        ["repo"] = "tree/master/network",
+        ["repo"] = "tree/master/baselibs",
         ["dependencies"] = {
             
         },
