Added UDP protocol. Added write program

--- a/programs.cfg
+++ b/programs.cfg
@@ -23,7 +23,9 @@
                 ["master/network/lib/network/tunnel.lua"] = "//lib/network",
                 ["master/network/bin/stp.lua"] = "//bin",
                 ["master/network/bin/dig.lua"] = "//bin",
+                ["master/network/bin/ping.lua"] = "//bin",
                 ["master/network/bin/stping.lua"] = "//bin",
+                ["master/network/bin/write.lua"] = "//bin",
                 ["master/network/bin/ifconfig.lua"] = "//bin",
                 ["master/network/usr/man/ifconfig"] = "//usr/man",
                 ["master/network/usr/man/network"] = "/bin",
@@ -36,6 +38,6 @@
             ["name"] = "Network Stack for OpenComputers",
             ["description"] = "Network stack for OpenComputers, implements ICMP, broadcast, routing, tcp and udp like protocols",
             ["authors"] = "Olaf Altwirren",
-            ["version"] = "0.95"
+            ["version"] = "0.96"
         }
 }
