Added documentation and version to the libraries. General cleanup.

--- a/programs.cfg
+++ b/programs.cfg
@@ -10,9 +10,9 @@
             
         },
         ["name"] = "Base Libraries commonly used",
-        ["description"] = "Base libraries for common stuff of all OA-Packages",
+        ["description"] = "Base libraries for common stuff of all OA-Packages including json, fileconfig and logging",
         ["authors"] = "Olaf Altwirren",
-        ["version"] = "0.4"
+        ["version"] = "0.5"
     },
     ["oanetwork"] = {
             ["files"] = {
