--- a/programs.cfg
+++ b/programs.cfg
@@ -30,6 +30,7 @@
                 ["master/network/usr/man/ifconfig"] = "//usr/man",
                 ["master/network/usr/man/network"] = "/bin",
                 ["master/network/usr/man/ping"] = "/bin"
+                ["master/network/usr/man/stping"] = "/bin"
             },
             ["repo"] = "tree/master/network",
             ["dependencies"] = {
@@ -38,6 +39,6 @@
             ["name"] = "Network Stack for OpenComputers",
             ["description"] = "Network stack for OpenComputers, implements ICMP, broadcast, routing, tcp and udp like protocols",
             ["authors"] = "Olaf Altwirren",
-            ["version"] = "0.97"
+            ["version"] = "0.98"
         }
 }
