Fixes in definition

--- a/programs.cfg
+++ b/programs.cfg
@@ -12,7 +12,7 @@
         ["name"] = "Base Libraries commonly used",
         ["description"] = "Base libraries for common stuff of all OA-Packages including json, fileconfig and logging",
         ["authors"] = "Olaf Altwirren",
-        ["version"] = "0.5"
+        ["version"] = "0.6"
     },
     ["oanetwork"] = {
             ["files"] = {
@@ -25,12 +25,12 @@
                 ["master/network/bin/dig.lua"] = "//bin",
                 ["master/network/bin/ping.lua"] = "//bin",
                 ["master/network/bin/stping.lua"] = "//bin",
-                ["master/network/bin/write.lua"] = "//bin",
                 ["master/network/bin/ifconfig.lua"] = "//bin",
                 ["master/network/usr/man/ifconfig"] = "//usr/man",
-                ["master/network/usr/man/network"] = "/bin",
-                ["master/network/usr/man/ping"] = "/bin",
-                ["master/network/usr/man/stping"] = "/bin"
+                ["master/network/usr/man/network"] = "//usr/man",
+                ["master/network/usr/man/ping"] = "//usr/man",
+                ["master/network/usr/man/stping"] = "//usr/man",
+                ["master/network/usr/bin/write.lua"] = "//usr/bin"
             },
             ["repo"] = "tree/master/network",
             ["dependencies"] = {
@@ -39,6 +39,6 @@
             ["name"] = "Network Stack for OpenComputers",
             ["description"] = "Network stack for OpenComputers, implements ICMP, broadcast, routing, tcp and udp like protocols",
             ["authors"] = "Olaf Altwirren",
-            ["version"] = "0.99"
+            ["version"] = "0.100"
         }
 }
